<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/f1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/Bienvenida"
        android:gravity="center"
        android:textSize="20dp"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edt_style"
        />



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/login"
        android:layout_weight="40"


        />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/user"
        android:layout_weight="9"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edt_style"

        />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:layout_weight="9"
        android:padding="15dp"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/edt_style"

        />

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/Ingresar"
        android:layout_weight="10"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"

        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"


        />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/Registrar"
        android:layout_weight="10"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"

        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="20"
        android:gravity="center|top"

        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@drawable/ll"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edt_style"
            />



        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@drawable/l"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edt_style"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewRecordarContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/olvidarPassword"
        android:gravity="center"/>
</LinearLayout>