<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/f2"
    tools:context=".Editar"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/editar"/>

    <TextView
        android:id="@+id/textBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/Editar"
        android:gravity="center"
        android:textSize="20dp"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edt_style"/>

    <EditText
        android:id="@+id/EdiUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="Usuario"
        android:enabled="false"
        android:inputType="textEmailAddress"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edt_style"/>/>

    <EditText
        android:id="@+id/EdiPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="Password"
        android:inputType="textPassword"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edt_style"/>/>
    <EditText
        android:id="@+id/EdiNombre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="Nombre"
        android:inputType="textPersonName"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edt_style"/>/>
    <EditText
        android:id="@+id/EdiApellido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="Apellido"
        android:inputType="textPersonName"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edt_style"/>/>
    <EditText
        android:id="@+id/EdiIdentificacion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="N° Identificacion"
        android:inputType="textPassword"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edt_style"/>/>


    <Button
        android:id="@+id/btnEdiRegistrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#26A69A"
        android:text="@string/EdiUsuario"
        android:textColor="#FFEBBE"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnEdiCancelar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#29B6F6"
        android:text="@string/Cancelar"
        android:textColor="#FFEBBE"
        android:textSize="30dp"
        android:textStyle="bold" />


</LinearLayout>